# FTXCalc

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
